--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@expo/webpack-config": "~19.0.1",
+    "dom-to-image": "^2.6.0",
+    "expo": "~50.0.7",
+    "expo-image-picker": "~14.7.1",
+    "expo-media-library": "~15.9.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-view-shot": "3.8.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.23.4"
   },
   "private": true
 }
